# sproinGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cleanup.sh  cmake_install.cmake  main.cpp  nvcompatlog.txt  sproinGL  test.cpp
assets/: 8-1_triple_step.py  Lily.tga  cylinder.blend  monkey.blend
include/: CMakeLists.txt
include/assimp/: assimp.pc  revision.h
include/bloomenthal/: CMakeLists.txt  Camera.cpp  Camera.h  CameraArcball.cpp  CameraArcball.h  Color.cpp  Color.h  Draw.cpp  Draw.h  Filter.h  GLXtras.cpp  GLXtras.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.h  Misc.cpp  Misc.h  Numbers.cpp  Numbers.h  Polygonizer.cpp  Polygonizer.h  Quaternion.cpp  Quaternion.h  Slider.cpp  Slider.h  Sphere.cpp  Sphere.h  Text.cpp  Text.h  VecMat.h  Widgets.cpp  Widgets.h
include/freetype/: freetype.h
include/glad/: CMakeLists.txt  glad.c
src/: Centipede.h  Game.h  GameCamera.h  PhysicsManager.h  Player.h  ball.h  bullet.h  camera.h  centipede.h  emu.h  game.h  game_camera.h  game_object.h  main.cpp  model.h  particle.h  physics_manager.h  player.h  shadow.h  spring.h  text.h
src/shaders/: fragment_shader.txt  hud_fshader.txt  hud_vshader.txt  scene_fshader.txt  scene_vshader.txt  shadow_fshader.txt  text_fshader.txt  text_vshader.txt  vshader_hud.txt
test/: test.nsight-gfxproj
