cmake_minimum_required (VERSION 2.8.11)
project(sproinGL)
find_package(glfw3 3.3 REQUIRED)
#set(OpenGL_GL_PREFERENCE GLVND)
find_package(OpenGL REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(external)
add_executable(${PROJECT_NAME} src/main.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC include ../external/)
target_link_libraries(${PROJECT_NAME} OpenGL::GL glfw GLAD GLXtras ${CMAKE_DL_LIBS})
