cmake_minimum_required (VERSION 3.0)
project(sproinGL VERSION 0.01)
find_package(glfw3 3.3 REQUIRED)
set(OpenGL_GL_PREFERENCE GLVND)
find_package(OpenGL REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(include)
add_executable(${PROJECT_NAME} src/main.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC include ../include/)
target_link_libraries(${PROJECT_NAME} OpenGL::GL assimp glfw GLAD GLXtras glm ${CMAKE_DL_LIBS})
