add_subdirectory(glm) 
add_subdirectory(glad)
add_subdirectory(bloomenthal)
#add_subdirectory(glu)

#add_library(glm::glm alias glm)

#add_library(glad src/glad.c)

#target_include_directories(glad public include)
#add_library(glxtras src/glxtras.cpp)
#target_include_directories(glxtras public include)

